# cs526-project

./: .gitignore  CMakeLists.txt  README.md
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
inputs/: input_for_hello.c
kint/: CMakeLists.txt  check_insertion.cpp  check_insertion.h  constraint.cpp  constraint.h  init_range.cpp  kint.cpp  kint_constant_range.h  kint_function.cpp  kint_function.h  kint_module.cpp  kint_module.h  range.cpp  range.h  range_helper.cpp  smt_query.cpp  smt_query.h  smt_solving.cpp  tainted.cpp
tests/: input_for_hello.c  input_for_range.c  input_for_smt.c  input_for_taint.c
